k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
# UPDATE THE API
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # ADD THIS LINE ABOVE
    nginx.ingress.kubernetes.io/rewrite-target: /
    # UPDATE THIS LINE ABOVE
    certmanager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - theisfrommikezhao.site
        - www.theisfrommikezhao.site
      secretName: k8s-multi-com
  rules:
    - host: theisfrommikezhao.site
      http:
        paths:
          - path: /
          # UPDATE THIS LINE ABOVE
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/
          # UPDATE THIS LINE ABOVE
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
    - host: www.theisfrommikezhao.site
      http:
        paths:
          - path: /
            # UPDATE THIS LINE ABOVE
            backend:
                serviceName: client-cluster-ip-service
                servicePort: 3000
          - path: /api/
            # UPDATE THIS LINE ABOVE
            backend:
                serviceName: server-cluster-ip-service
                servicePort: 5000
